--- a/StudioMedico/StudioFE/src/app/components/lista-medici/lista-medici.component.html
+++ b/StudioMedico/StudioFE/src/app/components/lista-medici/lista-medici.component.html
@@ -1,8 +1,6 @@
-<button class="btn btn-dark m-5" (click)="goBack()">Indietro</button>
-
-<table class="table  table-dark">
+<table class="table mt-5 rounded ">
     <thead>
-    <tr>
+        <tr class="head">
     <th>ID</th>
     <th>Nome</th>
     <th>Cognome</th>
@@ -14,7 +12,7 @@
     </thead>
     
     <tbody>
-    <tr *ngFor = "let medico of mediciList">
+        <tr  class="body" *ngFor = "let medico of mediciList">
     <td>{{medico.id}}</td>
     <td>{{medico.nome}}</td>
     <td>{{medico.cognome}}</td>
