--- a/StudioMedico/StudioFE/src/app/components/segreteria/segreteria.component.html
+++ b/StudioMedico/StudioFE/src/app/components/segreteria/segreteria.component.html
@@ -1,26 +1,21 @@
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col-sm m-1 btn btn-primary" routerLink="/listaPazienti">
-          Lista Pazienti
+        <div class="col-sm shadow-lg m-1 p-5 btn " routerLink="/listaPazienti">
+          <h5>Lista Pazienti</h5>
         </div>
-        <div class="col-sm m-1 btn btn-primary" routerLink="/listaMedici">
-          Lista Medici
+        <div class="col-sm shadow-lg m-1 p-5 btn " routerLink="/listaMedici">
+          <h5>Lista Medici</h5>
         </div>
-        <div class="col-sm m-1 btn btn-primary" routerLink="/searchPaziente">
-          Cerca Paziente
-        </div>
+        
       </div>
     
     <div class="row">
-        <div class="col-sm m-1 btn btn-primary" routerLink="/insertPaziente">
-          Inserisci nuovo paziente
+        <div class="col-sm shadow-lg m-1 p-5 btn " routerLink="/insertPaziente">
+          <h5>Inserisci nuovo paziente</h5>
         </div>
-        <div class="col-sm m-1 btn btn-primary" routerLink="/listaMedici">
-          Lista Medici
-        </div>
-        <div class="col-sm m-1 btn btn-primary" routerLink="/searchPaziente">
-          Cerca Paziente
+        <div class="col-sm shadow-lg m-1 p-5 btn " routerLink="/searchPaziente">
+          <h5>Cerca Paziente</h5>
         </div>
       </div>
   <div class="container">
