--- a/StudioMedico/StudioFE/src/app/components/segreteria/segreteria.component.html
+++ b/StudioMedico/StudioFE/src/app/components/segreteria/segreteria.component.html
@@ -1,26 +1,31 @@
-
 <div class="container mt-5">
-    <div class="row">
-        <div class="col-sm shadow-lg m-1 p-5 btn " routerLink="/listaPazienti">
-          <h5>Lista Pazienti</h5>
-        </div>
-        <div class="col-sm shadow-lg m-1 p-5 btn " routerLink="/listaMedici">
-          <h5>Lista Medici</h5>
-        </div>
-        
-      </div>
-    
-    <div class="row">
-        <div class="col-sm shadow-lg m-1 p-5 btn " routerLink="/insertPaziente">
-          <h5>Inserisci nuovo paziente</h5>
-        </div>
-        <div class="col-sm shadow-lg m-1 p-5 btn " routerLink="/searchPaziente">
-          <h5>Cerca Paziente</h5>
-        </div>
-      </div>
-  <div class="container">
-</div>
+  <div class="row">
+    <div class="col-sm shadow-lg m-1 p-5 btn " routerLink="/listaPazienti">
+      <h5>Lista Pazienti</h5>
+    </div>
+    <div class="col-sm shadow-lg m-1 p-5 btn " routerLink="/listaMedici">
+      <h5>Lista Medici</h5>
+    </div>
 
-    
+  </div>
 
-
+  <div class="row">
+    <div class="col-sm shadow-lg m-1 p-5 btn " routerLink="/insertPaziente">
+      <h5>Inserisci nuovo paziente</h5>
+    </div>
+    <div class="col-sm shadow-lg m-1 p-5 btn " >
+      <h5>Inserisci nuovo medico</h5>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm shadow-lg m-1 p-5 btn " routerLink="/insertPrenotazione">
+      <h5>Inserisci prenotazione</h5>
+    </div>
+    <div class="col-sm shadow-lg m-1 p-5 btn " >
+      <h5>Modifica Prenotazione</h5>
+    </div>
+    <div class="col-sm shadow-lg m-1 p-5 btn "  routerLink="/listaPrenotazioni">
+      <h5>Lista Prenotazioni</h5>
+    </div>
+  </div>
+  </div>
